--- a/csm-app/package.json
+++ b/csm-app/package.json
@@ -19,8 +19,12 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "ag-grid-angular": "^27.2.1",
+    "ag-grid-community": "^27.2.1",
     "angular-bootstrap-md": "^13.0.0",
     "bootstrap": "^5.1.3",
+    "jquery": "^3.6.0",
+    "json-server": "^0.17.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
