--- a/csm-app/angular.json
+++ b/csm-app/angular.json
@@ -30,11 +30,11 @@
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "node_modules/angular-bootstrap-md/assets/scss/bootstrap/bootstrap.scss",
               "node_modules/angular-bootstrap-md/assets/scss/mdb.scss",
-              "node_modules/jquery/dist/jquery.min.js",
-              "node_modules/jquery/dist/jquery.js",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/jquery/dist/jquery.min.js"
+            ]
           },
           "configurations": {
             "production": {
