--- a/csm-app/package.json
+++ b/csm-app/package.json
@@ -44,6 +44,6 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
     "typescript": "~4.6.2",
-    "webpack": "^2.1.0-beta.22"
+    "webpack": "^5.72.1"
   }
 }
